Line ending fix